--- a/admin/app/resources/site/pages/home.html
+++ b/admin/app/resources/site/pages/home.html
@@ -52,7 +52,7 @@
     <!-- Hero Section Begin -->
     <section class="hero">
         <div class="hero__slider owl-carousel">
-            <div class="hero__item set-bg" data-setbg="app/resources/site/img/hero/hero-1.jpg">
+            <div class="hero__item set-bg" data-setbg="app/resources/site/img/Arte_conceito.png">
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-6">
@@ -65,7 +65,7 @@
                     </div>
                 </div>
             </div>
-            <div class="hero__item set-bg" data-setbg="app/resources/site/img/hero/hero-1.jpg">
+            <div class="hero__item set-bg" data-setbg="app/resources/site/img/Background_primario.png">
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-6">
@@ -78,7 +78,7 @@
                     </div>
                 </div>
             </div>
-            <div class="hero__item set-bg" data-setbg="app/resources/site/img/hero/hero-1.jpg">
+            <div class="hero__item set-bg" data-setbg="app/resources/site/img/Backgorud_Secudario.png">
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-6">
@@ -264,7 +264,7 @@
     <!-- Counter Section End -->
 
     <!-- Team Section Begin -->
-    <section class="team spad set-bg" data-setbg="app/resources/site/img/team-bg.jpg">
+    <section class="team spad set-bg" data-setbg="app/resources/site/img/Background_primario.png">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
@@ -331,12 +331,97 @@
                         </div>
                     </div>
                 </div>
+
+                <div class="col-lg-3 col-md-6 col-sm-6 p-0">
+                    <div class="team__item team__item--four set-bg" data-setbg="app/resources/site/img/team/team-5.jpg">
+                        <div class="team__item__text">
+                            <h4>AMANDA STONE</h4>
+                            <p>Videographer</p>
+                            <div class="team__item__social">
+                                <a href="#"><i class="fa fa-facebook"></i></a>
+                                <a href="#"><i class="fa fa-twitter"></i></a>
+                                <a href="#"><i class="fa fa-dribbble"></i></a>
+                                <a href="#"><i class="fa fa-instagram"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!--<div class="col-lg-12 p-0">
+                    <div class="team__btn">
+                        <a href="#" class="primary-btn">Meet Our Team</a>
+                    </div>
+                </div>-->
+            </div>
+
+
+            <div class="row">
+                <div class="col-lg-3 col-md-6 col-sm-6 p-0">
+                    <div class="team__item set-bg" data-setbg="app/resources/site/img/team/team-5_editado.jpeg">
+                        <div class="team__item__text">
+                            <h4>AMANDA STONE</h4>
+                            <p>Videographer</p>
+                            <div class="team__item__social">
+                                <a href="#"><i class="fa fa-facebook"></i></a>
+                                <a href="#"><i class="fa fa-twitter"></i></a>
+                                <a href="#"><i class="fa fa-dribbble"></i></a>
+                                <a href="#"><i class="fa fa-instagram"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 col-sm-6 p-0">
+                    <div class="team__item team__item--second set-bg" data-setbg="app/resources/site/img/team/team-6.jpeg">
+                        <div class="team__item__text">
+                            <h4>AMANDA STONE</h4>
+                            <p>Videographer</p>
+                            <div class="team__item__social">
+                                <a href="#"><i class="fa fa-facebook"></i></a>
+                                <a href="#"><i class="fa fa-twitter"></i></a>
+                                <a href="#"><i class="fa fa-dribbble"></i></a>
+                                <a href="#"><i class="fa fa-instagram"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 col-sm-6 p-0">
+                    <div class="team__item team__item--third set-bg" data-setbg="app/resources/site/img/team/team-3.jpg">
+                        <div class="team__item__text">
+                            <h4>AMANDA STONE</h4>
+                            <p>Videographer</p>
+                            <div class="team__item__social">
+                                <a href="#"><i class="fa fa-facebook"></i></a>
+                                <a href="#"><i class="fa fa-twitter"></i></a>
+                                <a href="#"><i class="fa fa-dribbble"></i></a>
+                                <a href="#"><i class="fa fa-instagram"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 col-sm-6 p-0">
+                    <div class="team__item team__item--four set-bg" data-setbg="app/resources/site/img/team/team-4.jpg">
+                        <div class="team__item__text">
+                            <h4>AMANDA STONE</h4>
+                            <p>Videographer</p>
+                            <div class="team__item__social">
+                                <a href="#"><i class="fa fa-facebook"></i></a>
+                                <a href="#"><i class="fa fa-twitter"></i></a>
+                                <a href="#"><i class="fa fa-dribbble"></i></a>
+                                <a href="#"><i class="fa fa-instagram"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
                 <div class="col-lg-12 p-0">
                     <div class="team__btn">
                         <a href="#" class="primary-btn">Meet Our Team</a>
                     </div>
                 </div>
             </div>
+
+
         </div>
     </section>
     <!-- Team Section End -->
