Ajustes na página pública

--- a/admin/app/resources/site/pages/home.html
+++ b/admin/app/resources/site/pages/home.html
@@ -23,7 +23,7 @@
                                 <li><a href="{HOME_URL}#about.html">Sobre</a></li>
                                 <li><a href="{HOME_URL}#portfolio.html">Portfolio</a></li>
                                 <li><a href="{HOME_URL}#services.html">Services</a></li>
-                                <li><a href="#">Pages</a>
+                                <li><a href="{HOME_URL}">Pages</a>
                                     <ul class="dropdown">
                                         <li><a href="{HOME_URL}#about.html">Sobre</a></li>
                                         <li><a href="{HOME_URL}#portfolio.html">Portfolio</a></li>
@@ -264,7 +264,7 @@
     <!-- Counter Section End -->
 
     <!-- Team Section Begin -->
-    <section class="team spad set-bg" data-setbg="app/resources/site/img/Background_primario.png">
+    <section class="team spad set-bg" data-setbg="app/resources/site/img/Background_primario.png" id="team">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
@@ -319,21 +319,6 @@
                 </div>
                 <div class="col-lg-3 col-md-6 col-sm-6 p-0">
                     <div class="team__item team__item--four set-bg" data-setbg="app/resources/site/img/team/team-4.jpg">
-                        <div class="team__item__text">
-                            <h4>AMANDA STONE</h4>
-                            <p>Videographer</p>
-                            <div class="team__item__social">
-                                <a href="#"><i class="fa fa-facebook"></i></a>
-                                <a href="#"><i class="fa fa-twitter"></i></a>
-                                <a href="#"><i class="fa fa-dribbble"></i></a>
-                                <a href="#"><i class="fa fa-instagram"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-lg-3 col-md-6 col-sm-6 p-0">
-                    <div class="team__item team__item--four set-bg" data-setbg="app/resources/site/img/team/team-5.jpg">
                         <div class="team__item__text">
                             <h4>AMANDA STONE</h4>
                             <p>Videographer</p>
